# attendance-management-system

./: pyproject.toml
app/server/: _app.py  app.py  dependencies.py
app/server/db/: attendance.py  course.py  db.py  lecture.py  student.py
app/server/models/: Attendance.py  Course.py  ErrorResponse.py  Lecture.py  Student.py  _Course.py
app/server/routes/: attendance.py  course.py  index.py  lecture.py  main.py  student.py
app/server/templates/: app-base.html  app.html  attendance.html  base.html  config.html  contact.html  course.html  index.html  login.html  students.html
