[tool.poetry]
name = "attendance-management-system"
version = "0.1.1"
description = "A universal API for managing attendandance data created by multiple data producers, such as: a fingerprint scanner, an ID card scanner, attendance marked manually, google spreadsheets, discord bots, whatsapp bots and custom quizes."
authors = ["Vyom Jain <vyom.j@protonmail.com>"]
readme = "README.md"
packages = [{include = "attendance_management_system"}]
repository="https://github.com/Vyvy-vi/attendance-management-system/"
license="GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
motor = "^3.1.1"
toml = "^0.10.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
